# ebook-speaker

./: .dockerignore  .env.development  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README-docker.md  README.md  debug-chapter-extraction.js  demo.js  docker-compose.coreml.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  epub-reader.js  nodemon.json  package-lock.json  package.json  redis-tts-queue.md  security.md  server.js  test-epub-chapter-mapping.js  test-epub-functionality.js  test-quantizations-models.sh  test-tts-realtime-factor.js  test-tts-server.js
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/public/: manifest.json
client/src/: App.css  App.js  App.jsx
client/src/components/: BookList.css  BookList.jsx  BookReader.css  BookReader.js  BookReader.jsx  CardView.jsx  ChapterNavigation.jsx  ErrorBoundary.jsx  FloatingControls.jsx  ListView.jsx  ModelSelector.jsx  ScrollToTopButton.css  ScrollToTopButton.jsx  SpeedSelector.css  SpeedSelector.jsx  (+5 more)
public/: index.html
scripts/: preflight.js
shared/: textProcessing.js  textProcessing.test.js  ttsVoices.js
tests/: fileUploadSecurity.test.js  htmlSanitizer.test.js  textProcessing.test.js
tts/: .dockerignore  .gitignore  Dockerfile  Dockerfile.coreml  Dockerfile.cuda  README-GPU.md  README.md  build.sh  docker-compose.coreml.yml  docker-compose.cuda.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.py  supertonic.py  supertonic_wrapper.py  tts-benchmark-sentences.json  voices.py
utils/: auth.js  authStore.js  fileUploadSecurity.js  htmlSanitizer.js  security.js
(+17 files in other folders)
