[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "kokoro-onnx>=0.4.9",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "requests>=2.31.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16.0; platform_machine == 'x86_64'",
    "tensorrt-cu12>=10.13.2.6; platform_machine == 'x86_64'",
]

[tool.uv]
# Don't resolve optional dependencies by default
environments = ["platform_machine != 'aarch64' or extra != 'gpu'"]
